Input buttons rendered at the wrong size when pinching-to-zoom https://bugs.webkit.org/show_bug.cgi?id=146916

Patch by Wenson Hsieh <wenson_hsieh@apple.com> on 2015-07-14
Reviewed by Dean Jackson.

Scales buttons and their focus rects up when pinching to zoom by painting to an offscreen ImageBuffer which is
then scaled and painted onto the display.

* platform/Theme.h: Modified signature of Theme::paint.
(WebCore::Theme::paint): Added plumbing necessary to send the device and page scale factors to paintButton.
* platform/mac/ThemeMac.h: Modified signature of paintButton.
* platform/mac/ThemeMac.mm: Added ImageBuffer.h header.
(WebCore::buttonFocusRectOutlineWidth): Represents the width of the focus rect of a button. Used by paintButton
    to determine the size of the ImageBuffer required to draw a focus rect.
(WebCore::paintButton): Changed to paint button cells and the focus rect, if applicable, to a temporary ImageBuffer
    before painting the ImageBuffer onto the view. Refactored to receive a deviceScaleFactor and page scale factor,
    used when painting to the ImageBuffer.
(WebCore::ThemeMac::paint): Added plumbing necessary to send the device and page scale factors to paintButton.
* rendering/RenderTheme.cpp: Modified signature of RenderTheme::paint.
(WebCore::RenderTheme::paint): Added plumbing necessary to send the device and page scale factors to paintButton.

Canonical link: https://commits.webkit.org/165005@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@186817 268f45cc-cd09-0410-ab3c-d52691b4dbfc